<resources>
    <string name="app_name">willIgetwet</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Clouds">Clouds</string>
    <string name="top_layer">5 - 13km</string>
    <string name="cirrus">cirrus</string>
    <string name="cirrocumulus">cirrocumulus</string>
    <string name="cirrostratus">cirrostratus</string>
    <string name="cirro">cirro</string>
    <string name="cumulus">cumulus</string>
    <string name="stratus">stratus</string>
    <string name="high_clouds">High clouds</string>
    <string name="middle_clouds">Middle clouds</string>
    <string name="middle_layer">2 - 7km</string>
    <string name="altocumulus">altocumulus</string>
    <string name="alto">alto</string>
    <string name="altostratus">altostratus</string>
    <string name="nimbostratus">nimbostratus</string>
    <string name="nimbo">nimbo</string>
    <string name="stratocumulus">stratocumulus</string>
    <string name="strato">strato</string>
    <string name="low_clouds">surface - 2km</string>
    <string name="lower_clouds">lower clouds</string>
    <string name="vertical_clouds">vertical clouds</string>
    <string name="surface_13km">surface - 13km</string>
    <string name="cumulonimbus">cumulonimbus</string>
    <string name="cumulo">cumulo</string>
    <string name="nimbus">nimbus</string>
    <string name="unusual_clouds">unusual clouds</string>
    <string name="lenticular">lenticular</string>
    <string name="kelvin_helmholtz">kelvin-helmholtz</string>
    <string name="kelvin">kelvin</string>
    <string name="helmholtz">helmholtz</string>
    <string name="mammatus">mammatus</string>
    <string name="weather">Weather</string>
    <string name="description">Description</string>
    <string name="search_a_city">Search a city</string>
    <string name="use_gps">Use GPS</string>
    <string name="use_location">Use location</string>
</resources>
