<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.cloudsbook.CloudsFragment">

   <LinearLayout android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="vertical">
       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginStart="16dp"
           android:layout_marginTop="10dp"
           android:layout_marginEnd="16dp"
           style="@style/Title"
           android:textSize="30sp"
           android:fontFamily="sans-serif-condensed"
           android:text="@string/high_clouds" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            style="@style/Title"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/top_layer" />
   </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/high_clouds"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbars="none"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

       <LinearLayout
           android:layout_height="wrap_content"
           android:layout_width="wrap_content">
           <androidx.cardview.widget.CardView
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:layout_marginEnd="16dp"
               app:cardCornerRadius="35dp" >
               <RelativeLayout
                   android:layout_height="match_parent"
                   android:layout_width="match_parent">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:scaleType="centerCrop"
                       android:adjustViewBounds="true"
                       android:contentDescription="@string/cirrus"
                       android:src="@drawable/cirrus"/>
                   <View
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@color/colorPrimary"
                       android:alpha="0.2"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="37dp"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="150dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/cirrus"
                       style="@style/Title"
                       android:layout_marginStart="16dp"
                        />
               </RelativeLayout>
           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:layout_marginEnd="16dp"
               app:cardCornerRadius="35dp">
               <RelativeLayout
                   android:layout_height="match_parent"
                   android:layout_width="match_parent">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:scaleType="centerCrop"
                       android:adjustViewBounds="true"
                       android:contentDescription="@string/cirrocumulus"
                       android:src="@drawable/cirrocumulus"/>
                   <View
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@color/pink"
                       android:alpha="0.2"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="37dp"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="120dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/cirro"
                       style="@style/Title"
                       android:layout_marginStart="16dp" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="37dp"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="150dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/cumulus"
                       style="@style/Title"
                       android:layout_marginStart="16dp" />
               </RelativeLayout>

           </androidx.cardview.widget.CardView>
           <androidx.cardview.widget.CardView
               android:layout_width="200dp"
               android:layout_height="200dp"
               android:background="@drawable/cirrostratus"
               app:cardCornerRadius="35dp">
               <RelativeLayout
                   android:layout_height="match_parent"
                   android:layout_width="match_parent">
                   <ImageView
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:scaleType="centerCrop"
                       android:adjustViewBounds="true"
                       android:contentDescription="@string/cirrostratus"
                       android:src="@drawable/cirrostratus"/>
                   <View
                       android:layout_width="match_parent"
                       android:layout_height="match_parent"
                       android:background="@color/colorPrimary"
                       android:alpha="0.2"/>
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="37dp"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="120dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/cirro"
                       style="@style/Title"
                       android:layout_marginStart="16dp" />
                   <TextView
                       android:layout_width="match_parent"
                       android:layout_height="37dp"
                       android:layout_alignParentEnd="true"
                       android:layout_marginTop="150dp"
                       android:layout_marginBottom="16dp"
                       android:text="@string/stratus"
                       style="@style/Title"
                       android:layout_marginStart="16dp" />
               </RelativeLayout>

           </androidx.cardview.widget.CardView>

       </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            style="@style/Title"
            android:textSize="30sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/middle_clouds" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="16dp"
            style="@style/Title"
            android:textSize="20sp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/middle_layer" />
    </LinearLayout>

    <HorizontalScrollView
        android:id="@+id/middle_clouds"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scrollbars="none"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="35dp" >
                <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/altocumulus"
                        android:src="@drawable/altocumulus"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/colorPrimary"
                        android:alpha="0.2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="120dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/alto"
                        style="@style/Title"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="150dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/cumulus"
                        style="@style/Title"
                        android:layout_marginStart="16dp" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="35dp">
                <RelativeLayout
                    android:layout_height="match_parent"
                    android:layout_width="match_parent">
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/altostratus"
                        android:src="@drawable/altostratus"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/pink"
                        android:alpha="0.2"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="120dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/alto"
                        style="@style/Title"
                        android:layout_marginStart="16dp" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="150dp"
                        android:layout_marginBottom="16dp"
                        android:text="@string/stratus"
                        style="@style/Title"
                        android:layout_marginStart="16dp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>